# CPU-GPU-monitor

./: README.md  pyproject.toml  requirements.txt  umonitor.conf  umonitor.desktop  umonitor.sh
